--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:4000/",
+  "proxy": "https://test-duty-log.uc.r.appspot.com/",
   "name": "client",
   "version": "0.1.0",
   "private": true,
