--- a/app.yaml
+++ b/app.yaml
@@ -1,11 +1,4 @@
 runtime: nodejs18
-service: default
-handlers:
-  - url: /api/.*
-    script: auto
-  - url: /
-    static_files: build/index.html
-    upload: build/index.html
-  - url: /(.*)
-    static_files: build/\1
-    upload: build/(.*)
+
+env_variables:
+  DB_URI: mongodb+srv://ytabdou:LJZfaOJ2Xy4Zi0Bo@mygencluster.zjmvb9a.mongodb.net/?retryWrites=true&w=majority
