--- a/server/app.yaml
+++ b/server/app.yaml
@@ -1,3 +1,7 @@
 runtime: nodejs18
 env_variables:
   DB_URI: mongodb+srv://ytabdou:LJZfaOJ2Xy4Zi0Bo@mygencluster.zjmvb9a.mongodb.net/?retryWrites=true&w=majority
+handlers:
+- url: /.*
+  script: auto
+  secure: always
