--- a/server/app.yaml
+++ b/server/app.yaml
@@ -1,8 +1,3 @@
 runtime: nodejs
 env: flex
-env_variables:
-  DB_URI: mongodb+srv://ytabdou:LJZfaOJ2Xy4Zi0Bo@mygencluster.zjmvb9a.mongodb.net/?retryWrites=true&w=majority
-handlers:
-- url: /.*
-  script: auto
-  secure: always
+service: default
